<resources>
    <string name="app_name">OnTime</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">OnTime</string>
    <string name="nav_header_subtitle">Friendly pill reminder application</string>
    <string name="nav_header_desc">Group Gray</string>
    <string name="nav_login">Login</string>
    <string name="nav_signOut">Sign Out</string>

    <string name="tab_today">Today</string>
    <string name="tab_statistics">Statistics</string>
    <string name="tab_emergency">Emergency</string>
    <string name="tab_login">Login</string>
    <string name="tab_addPill">New pill</string>
    <string name="tab_settings">Settings</string>
    <string name="tab_emergency_settings">Emergency Settings</string>
    <string name="tab_other_settings">Other Settings</string>

    <string name="emergencyPerson">Berke Esmer</string>
    <string name="emergencyPhone">+358 40 3600652</string>

    <string name="usernameHint">Username</string>
    <string name="passwordHint">Password</string>
    <string name="btnLogin">Login</string>
    <string name="btnForgetPassword">Forgot Password</string>
    <string name="btnRegister">Register</string>
    <string name="btnSaveMe">Save Me</string>
    <string name="saveAccount">Let\'s save your account!</string>
    <string name="saveAccountOR">- OR -</string>

    <string name="nextPill">Today\'s pills</string>
    <string name="alreadyTakenPills">Already taken today</string>

    <string name="onTimeCount">Pills taken on time : 89</string>
    <string name="delayedCount">Pills taken delayed : 10</string>
    <string name="missedCount">Pills missed : 1</string>
    <string name="statisticsDate"><u>January, 2019</u></string>
    <string name="btnGreen">Green</string>
    <string name="btnOrange">Orange</string>
    <string name="btnRed">Red</string>

    <string name="pillNameHint">Pill name</string>
    <string name="pillAmountHint">Amount</string>
    <string name="btnPillSave">Save</string>
    <string name="btnPillEdit">Edit</string>
    <string name="btnPillCancel">Cancel</string>
    <string name="btnPillDelete">Delete</string>
    <string name="radioMorning">Morning</string>
    <string name="radioAfternoon">Afternoon</string>
    <string name="radioEvening">Evening</string>

    <string name="medicineTime">Medicine time</string>
    <string name="snooze">Snooze</string>
    <string name="missedPillText">YOU HAVE MISSED TO TAKE YOUR PILL!</string>

    <string name="logoContentDescription">Logo of OnTime</string>
    <string name="statisticsDescription">Statistics</string>
    <string name="pillContentDescription">Picture of Pill</string>
    <string name="missedContentDescription">Missed pill</string>
    <string name="usernameInput">Username</string>
    <string name="welcomeText">Welcome</string>
    <string name="inputEmailAddress">Input email address</string>
    <string name="inputPassword">Input password</string>
    <string name="inputPasswordRetype">Retype password</string>
    <string name="btnSignUp">Sign Up</string>

    <string name="pillDeleteDialogTitle">Deleting a pill</string>
    <string name="pillDeleteDialogMessage">You have chosen to delete this pill from your
        alarm list. All the alarm settings will be removed. Are you sure? </string>
    <string name="pillDeleteConfirm">YES</string>
    <string name="pillDeleteCancel">NO</string>

    <string name="emergencyPersonName">Name</string>
    <string name="emergencyPersonPhone">Phone number</string>
    <string name="emergencyImageContent">Image of person to call</string>
    <string name="emergencyCallImageContent">Call image</string>

    <string name="otherSettings_bt">Bluetooth settings</string>
    <string name="otherSettings_emergency">Emergency settings</string>
    <string name="otherSettings_other">Other settings</string>

    <string name="medicineNameAlarm">Medicine Name</string>

    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="_25_min">25 min</string>
    <string name="_5_minutes">5 minutes</string>
    <string name="snooze_time">Snooze time</string>
    <string name="_22_00">22:00</string>
    <string name="custom">Custom</string>
    <string name="evening">Evening</string>
    <string name="afternoon">Afternoon</string>
    <string name="morning">Morning</string>
    <string name="pill_alarm_time">Pill Alarm time</string>
    <string name="other_settings">Other Settings</string>
    <string name="_10_minutes">10 minutes</string>
    <string name="_15_minutes">15 minutes</string>
    <string name="_20_minutes">20 minutes</string>
    <string name="_25_minutes">25 minutes</string>
    <string name="SelectMorningTime">Select morning time</string>
    <string name="SelectAfternoonTime">Select afternoon time</string>
    <string name="SelectEveningTime">Select evening time</string>
    <string name="SelectCustomTime">Select custom time</string>
</resources>
