<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="@dimen/logoSize"
        android:layout_height="@dimen/logoSize"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/marginXL"
        android:src="@drawable/pill_icon"
        android:contentDescription="@string/pillContentDescription" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginXL"
        android:inputType="text"
        android:hint="@string/pillNameHint" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginS"
        android:inputType="text"
        android:hint="@string/pillAmountHint" />

    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginL"
        android:text="@string/radioMorning"
        android:checked="false" />

    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginS"
        android:text="@string/radioAfternoon"
        android:checked="false" />

    <RadioButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginS"
        android:text="@string/radioEvening"
        android:checked="false" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/marginXXL"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnPillSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/btnPillSave" />

        <Button
            android:id="@+id/btnPillDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/btnPillCancel" />

    </LinearLayout>

</LinearLayout>