<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.OtherSettingsFragment" >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/marginM"
            android:padding="@dimen/marginM"
            app:rowCount="14"
            app:columnCount="2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                app:layout_row="0"
                app:layout_column="0"
                app:layout_columnSpan="2"
                android:text="@string/other_settings"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                app:layout_gravity="center"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="#000000"
                app:layout_rowWeight="1"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_row="2"
                app:layout_column="0"
                android:text="@string/pill_alarm_time"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/colorRedMD"
                app:layout_gravity="center"
                app:layout_rowWeight="1"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_row="3"
                app:layout_column="0"
                android:text="@string/morning"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="#000000"
                app:layout_gravity="center"
                app:layout_rowWeight="1"
                />

            <Button
                android:id="@+id/morningBtn"
                app:layout_row="3"
                app:layout_column="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="8:00"
                app:layout_gravity="center"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_row="4"
                app:layout_column="0"
                android:text="@string/afternoon"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="#000000"
                app:layout_gravity="center"
                app:layout_rowWeight="1"
                />
            <Button
                android:id="@+id/afternoonBtn"
                app:layout_row="4"
                app:layout_column="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="13:00"
                app:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_row="5"
                app:layout_column="0"
                android:text="@string/evening"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="#000000"
                app:layout_gravity="center"
                app:layout_rowWeight="1"
                />
            <Button
                android:id="@+id/eveningBtn"
                app:layout_row="5"
                app:layout_column="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="20:00"
                app:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_row="7"
                app:layout_column="0"
                android:text="@string/snooze_time"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/colorRedMD"
                app:layout_gravity="center"
                app:layout_rowWeight="1"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_row="8"
                app:layout_rowSpan="5"
                app:layout_column="0"
                app:layout_columnSpan="2"
                android:gravity="start">
                <RadioButton
                    android:id="@+id/s5Rbtn"
                    android:layout_marginStart="@dimen/marginL"
                    android:text="@string/_5_minutes"
                    android:checked="true"
                    android:textSize="18sp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>

                <RadioButton
                    android:id="@+id/s10Rbtn"
                    android:layout_marginStart="@dimen/marginL"
                    android:text="@string/_10_minutes"
                    android:textSize="18sp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
                <RadioButton
                    android:id="@+id/s15Rbtn"
                    android:layout_marginStart="@dimen/marginL"
                    android:text="@string/_15_minutes"
                    android:textSize="18sp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
                <RadioButton
                    android:id="@+id/s20Rbtn"
                    android:layout_marginStart="@dimen/marginL"
                    android:text="@string/_20_minutes"
                    android:textSize="18sp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
                <RadioButton
                    android:id="@+id/s25Rbtn"
                    android:layout_marginStart="@dimen/marginL"
                    android:text="@string/_25_minutes"
                    android:textSize="18sp"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
            </RadioGroup>
            <Button
                android:id="@+id/saveBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/marginXL"
                app:layout_row="13"
                app:layout_column="0"
                app:layout_gravity="right|center"
                android:onClick="snoozeCongifSaveBtnClicked"
                android:text="@string/save" />

            <Button
                android:id="@+id/cancelBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/marginXL"
                app:layout_row="13"
                app:layout_column="1"
                app:layout_gravity="center"
                android:text="@string/cancel"
                />
        </android.support.v7.widget.GridLayout>
    </android.support.constraint.ConstraintLayout>

</ScrollView>
