<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/viewWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginXXL"
        android:layout_marginLeft="@dimen/marginXL"
        android:layout_marginRight="@dimen/marginXL"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:text="@string/welcomeText"
        android:textAlignment="center"
        android:textSize="@dimen/registerAccountTextSize"
        android:background="@color/colorGreenMD" />

    <EditText
        android:id="@+id/inputUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginXL"
        android:layout_marginStart="@dimen/marginXL"
        android:layout_marginEnd="@dimen/marginXL"
        android:layout_marginBottom="@dimen/marginXL"
        android:textSize="@dimen/registerAccountEditTextSize"
        android:hint="@string/usernameInput"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginXL"
        android:layout_marginEnd="@dimen/marginXL"
        android:layout_marginBottom="@dimen/marginXL"
        android:text="@string/inputPassword"
        android:textSize="@dimen/registerAccountEditTextSize"
        android:ems="10"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/inputRetypePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginXL"
        android:layout_marginEnd="@dimen/marginXL"
        android:layout_marginBottom="@dimen/marginXL"
        android:textSize="@dimen/registerAccountEditTextSize"
        android:hint="@string/inputPasswordRetype"
        android:ems="10"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginXL"
        android:layout_marginEnd="@dimen/marginXL"
        android:layout_marginBottom="@dimen/marginXL"
        android:textSize="@dimen/registerAccountEditTextSize"
        android:hint="@string/inputEmailAddress"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingStart="@dimen/marginXL"
        android:paddingEnd="@dimen/marginXL"
        android:text="@string/btnSignUp"
        android:textSize="@dimen/registerAccountEditTextSize"
        android:background="@color/colorGreenMD" />

</LinearLayout>