<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_saveAccount"
        android:layout_marginTop="@dimen/marginXXL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginXL"
        android:layout_marginRight="@dimen/marginXL"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:textSize="@dimen/saveAccountTextSize"
        android:text="@string/saveAccount"
        android:background="@color/colorGreenMD" />

    <EditText
        android:id="@+id/inputUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginXL"
        android:layout_marginEnd="@dimen/marginXL"
        android:layout_marginBottom="@dimen/marginXL"
        android:layout_marginTop="@dimen/marginXXL"
        android:textSize="@dimen/saveAccountEditTextSize"
        android:hint="@string/usernameInput"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textOR"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/saveAccountOR"
        android:textSize="@dimen/saveAccountTextSize"
        android:textAlignment="center"
        android:layout_gravity="center" />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginXL"
        android:layout_marginStart="@dimen/marginXL"
        android:layout_marginEnd="@dimen/marginXL"
        android:hint="@string/inputEmailAddress"
        android:textSize="@dimen/saveAccountEditTextSize"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/saveMeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginXL"
        android:paddingStart="@dimen/marginXL"
        android:paddingEnd="@dimen/marginXL"
        android:layout_gravity="center_horizontal"
        android:text="@string/btnSaveMe"
        android:textSize="@dimen/saveAccountEditTextSize"
        android:background="@color/colorGreenMD" />

</LinearLayout>
</ScrollView>