<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/mugshot"
        android:layout_width="@dimen/emergencyAvatar"
        android:layout_height="@dimen/emergencyAvatar"
        android:layout_marginTop="@dimen/marginXL"
        android:layout_marginStart="@dimen/marginXL"
        android:layout_marginEnd="@dimen/marginXL"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/avatar_icon"
        android:contentDescription="@string/emergencyImageContent" />

    <EditText
        android:id="@+id/name_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginXL"
        android:layout_marginStart="@dimen/marginXL"
        android:layout_marginEnd="@dimen/marginXL"
        android:layout_gravity="center_horizontal"
        android:labelFor="@id/name_field"
        android:inputType="textPersonName"
        android:hint="@string/emergencyPersonName" />

    <EditText
        android:id="@+id/number_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginXL"
        android:layout_marginStart="@dimen/marginXL"
        android:layout_marginEnd="@dimen/marginXL"
        android:layout_gravity="center_horizontal"
        android:labelFor="@id/number_field"
        android:inputType="phone"
        android:hint="@string/emergencyPersonPhone"  />

    <ImageButton
        android:id="@+id/callButton"
        android:layout_width="@dimen/emergencyCallButtonSize"
        android:layout_height="@dimen/emergencyCallButtonSize"
        android:layout_marginTop="@dimen/marginXL"
        android:layout_gravity="center_horizontal"
        android:src="@android:drawable/ic_menu_call"
        android:scaleType="fitCenter"
        android:contentDescription="@string/emergencyCallImageContent" />

</LinearLayout>