<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorYellowMD"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/pill_missed"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="40dp"
        android:layout_gravity="center_horizontal"
        android:scaleType="fitXY"
        android:src="@drawable/no_red"
        android:contentDescription="@string/missedContentDescription" />

    <TextView
        android:id="@+id/pill_missed_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:layout_gravity="center_horizontal"
        android:lines="4"
        android:text="@string/missedPillText"
        android:textAlignment="center"
        android:textSize="@dimen/saveAccountTextSize"
        android:textStyle="bold"
        android:background="@color/colorYellowMD" />

    <Button
        android:id="@+id/okButton"
        android:layout_marginTop="60dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:text="@string/ok"
        android:textSize="@dimen/saveAccountTextSize"
        android:background="@color/colorRedMD" />

</LinearLayout>