<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/viewWelcome"
        android:layout_marginTop="85dp"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:ems="10"
        android:layout_gravity="center_horizontal"
        android:text="Welcome !"
        android:textAlignment="center"
        android:textSize="60sp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@color/colorGreenMD"
        />

    <EditText
        android:id="@+id/inputUsername"
        android:layout_marginTop="@dimen/marginXL"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginStart="@dimen/marginXL"
        android:layout_marginEnd="@dimen/marginXL"
        android:layout_marginHorizontal="40dp"
        android:text="@string/inputUsername"
        android:textSize="25dp"
        android:layout_marginBottom="@dimen/marginXL"
        />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_marginStart="@dimen/marginXL"
        android:layout_marginEnd="@dimen/marginXL"
        android:text="@string/inputPassword"
        android:textSize="25dp"
        android:layout_marginBottom="@dimen/marginXL"
        />

    <EditText
        android:id="@+id/inputRetypePassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_marginStart="@dimen/marginXL"
        android:layout_marginEnd="@dimen/marginXL"
        android:text="@string/inputPasswordRetype"
        android:textSize="25dp"
        android:layout_marginBottom="@dimen/marginXL"
        />

    <EditText
        android:id="@+id/inputEmail"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:layout_marginStart="@dimen/marginXL"
        android:layout_marginEnd="@dimen/marginXL"
        android:text="@string/inputEmailAddress"
        android:textSize="25sp"
        android:layout_marginBottom="@dimen/marginXL"
        />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="SIGN UP"
        android:textSize="22dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorGreenMD"
        />

</LinearLayout>